<resources>
    <string name="app_name">TapasTop</string>
    <string name="login_title">Login</string>
    <string name="signup_title">Sign Up</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="forgot_password"><u>Forgot password</u></string>
    <string name="main_menu">Main Menu</string>
    <string name="profile_title">Profile</string>
    <string name="favorites_title">Favorites</string>
    <string name="top_title">Top 5</string>
    <string name="awards_title">Awards</string>
    <string name="last_5_title">Last 5</string>
    <string name="view_all_title">View all</string>
    <string name="view_profile_title">View profile</string>
    <string name="username_exist_error_msg">This username already exists</string>
    <string name="empty_field_error_msg">This field is mandatory</string>
    <string name="passwords_unmatch_msg">Passwords are not the same</string>
    <string name="invalid_mail_msg">Invalid email</string>
    <string name="stats_title">Stats</string>
    <string name="edit_title">Edit</string>
    <string name="name_textview">Name</string>
    <string name="last_name_textview">Last Name</string>
    <string name="username_textview">Username</string>
    <string name="fullname_hint">Full Name</string>
    <string name="gender_hint">Choose Gender: </string>
    <string name="country_hint">Country</string>
    <string name="location_hint">Location</string>
    <string name="description_hint">Description</string>
    <string name="gender_male">M</string>
    <string name="gender_female">F</string>
    <string name="gender_other">O</string>
    <string name="title_post_signup">Complete your profile</string>
    <string name="upload_text">Upload a profile picture</string>
    <string name="name_title">Name:</string>
    <string name="last_name_title">Last Name:</string>
    <string name="email_title">Email:</string>
    <string name="gender_title">Gender:</string>
    <string name="country_title">Country:</string>
    <string name="location_title">Location:</string>
    <string name="description_title">Description:</string>
    <string name="degustation_title">Total number of degustations added:</string>
    <string name="locals_title">Total number of locals added:</string>
    <string name="requests_title">Friend Requests</string>
    <string name="age_title">Age\nVerification</string>
    <string name="age_warning">You must be 18 to use this app</string>
    <string name="select_from_gallery_text">Select from your gallery</string>
    <string name="email_verification_title">Email Verification</string>
    <string name="resend_email"><u>Resend email</u></string>
    <string name="code">Code:</string>
    <string name="edit_profile_title">Edit your profile</string>
    <string name="update_msg">Successfully updated</string>
    <string name="try_again_msg">Error on the server\nPlease try again later</string>
    <string name="check_name_availability_msg">Checking name availability...</string>
    <string name="forgot_password_title">Forgot password</string>
    <string name="check_inbox_hint">Check you inbox and spam folder</string>
    <string name="search_hint">Search friends...</string>
    <string name="enter_username_hint">Enter you username</string>
    <string name="enter_new_password_hint">Enter your new password</string>
    <string name="continue_title">Continue</string>
    <string name="new_password_title">New password</string>
    <string name="change_title">Change</string>
    <string name="accept_title">Accept</string>
    <string name="decline_title">Decline</string>
    <string name="nothing_to_show_title">Nothing to show here :(</string>
    <string name="send_friend_request_title">Send friend request</string>
    <string name="pending_friend_request">Requested</string>
    <string name="friends_list_title">Friends List</string>
    <string name="help_title">Help</string>
    <string name="ok_text">Ok</string>
    <string name="wrong_code_msg">Wrong code</string>
    <string name="successful_logout_msg">See you soon!</string>
    <string name="login_error_msg">Username and password doesn\'t match</string>
    <string name="help_text">Touch the \"View...\" buttons to enter the different sections of the menu or touch the search icon to open the search bar</string>
    <string name="your_rating_text">Your rate : %1$.1f</string>
    <string name="rating_text">Average Rating : %1$.1f</string>
    <string name="type_of_food">Type of food</string>
    <string name="region">Region</string>
    <string name="restaurant">Restaurant</string>
    <string name="taste">Taste</string>
    <string name="add_tapa_title">Add new Tapa</string>
    <string name="users_title">Users</string>
    <string name="tapas_title" translatable="false">Tapas</string>
    <string-array name="types_of_food">
        <item>Meat</item>
        <item>Fish</item>
        <item>Appetizer</item>
        <item>Vegetable</item>
        <item>Pasta</item>
        <item>Rice</item>
    </string-array>
    <string-array name="tastes">
        <item>Sweet</item>
        <item>Bitter</item>
        <item>Salty</item>
    </string-array>
</resources>