<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title_post_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.1"
                    tools:text="@string/title_post_signup" />

                <EditText
                    android:id="@+id/name_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintHorizontal_bias="0.05"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title_post_signup"
                    android:hint="@string/fullname_hint"/>

                <EditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintHorizontal_bias="0.05"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/name_edit_text"
                    android:hint="@string/email_hint"/>

                <RadioGroup
                    android:id="@+id/gender_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/email_edit_text"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintHorizontal_bias="0.05"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/male_radio_button"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintHorizontal_bias="0.05"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/gender_radio_group"
                        tools:text="@string/gender_male"/>

                    <RadioButton
                        android:id="@+id/female_radio_button"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintHorizontal_bias="1.5"
                        app:layout_constraintLeft_toLeftOf="@+id/male_radio_button"
                        tools:text="@string/gender_female"/>
                </RadioGroup>

                <EditText
                    android:id="@+id/country_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintHorizontal_bias="0.05"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/gender_radio_group"
                    android:hint="@string/country_hint"/>

                <EditText
                    android:id="@+id/location_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintHorizontal_bias="0.05"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/country_edit_text"
                    android:hint="@string/location_hint"/>

                <EditText
                    android:id="@+id/description_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintHorizontal_bias="0.05"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/location_edit_text"
                    android:hint="@string/description_hint"/>

                <Button
                    android:id="@+id/upload_button"
                    style="@style/RoundedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintHorizontal_bias="0.05"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/description_edit_text"
                    tools:text="@string/upload_text"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </ScrollView>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_baseline_save_24"
            android:backgroundTint="@color/amber_700"
            app:tint = "@color/white"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"/>
    </RelativeLayout>
</layout>