<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/login_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias=".3"
        app:layout_constraintHorizontal_bias=".5"
        android:hint="@string/username_hint"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:drawableStart="@drawable/ic_username"
        android:drawableTint="@color/teal_700"
        android:drawablePadding="20dp"
        android:background="@drawable/edit_text_bg"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/login_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias=".5"
        android:hint="@string/password_hint"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_username"
        app:backgroundTint="@null"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_password_lock"
        android:drawablePadding="20dp"
        android:drawableTint="@color/teal_700"
        />
    
    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias=".7"
        android:text="@string/login_title"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_password"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        android:background="@drawable/button_bg"
        android:stateListAnimator="@null" />
    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="1"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/login_password"
        app:layout_constraintTop_toBottomOf="@id/login_password"
        />
</androidx.constraintlayout.widget.ConstraintLayout>