<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="es.upm.isii.tapastop.model.UserViewModel"/>
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/title_post_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/brandon_grotesque_black"
                    android:text="@string/title_post_signup"
                    android:textAllCaps="true"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.02"
                    tools:text="@string/title_post_signup" />

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/profile_img"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title_post_signup"
                    android:src="@drawable/profile_pic_male"/>

                <TextView
                    android:id="@+id/profile_img_hint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_from_gallery_text"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/profile_img" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/sign_up_name"
                    style="@style/OutlinedRoundedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/profile_img_hint"
                    app:layout_constraintWidth_percent=".8">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sign_up_name_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name_textview" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/sign_up_last_name"
                    style="@style/OutlinedRoundedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/sign_up_name"
                    app:layout_constraintWidth_percent=".8">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sign_up_last_name_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name_textview" />
                </com.google.android.material.textfield.TextInputLayout>


                <RadioGroup
                    android:id="@+id/gender_radio_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="6dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintStart_toStartOf="@id/sign_up_last_name"
                    app:layout_constraintTop_toBottomOf="@+id/sign_up_last_name">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/gender_hint" />

                    <RadioButton
                        android:id="@+id/male_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gender_male"
                        android:onClick="@{() -> viewModel.setGender(@string/gender_male)}"
                        app:layout_constraintHorizontal_bias="0.05"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/gender_radio_group"
                        tools:text="@string/gender_male" />

                    <RadioButton
                        android:id="@+id/female_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/gender_female"
                        android:onClick="@{() -> viewModel.setGender(@string/gender_female)}"
                        app:layout_constraintHorizontal_bias="1.5"
                        app:layout_constraintLeft_toLeftOf="@+id/male_radio_button"
                        app:layout_constraintRight_toRightOf="parent"
                        tools:text="@string/gender_female" />
                </RadioGroup>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/sign_up_country"
                    style="@style/OutlinedRoundedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/gender_radio_group"
                    app:layout_constraintWidth_percent=".8">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sign_up_country_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/country_hint" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/sign_up_location"
                    style="@style/OutlinedRoundedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/sign_up_country"
                    app:layout_constraintWidth_percent=".8">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sign_up_location_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/location_hint" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/sign_up_description"
                    style="@style/OutlinedRoundedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/sign_up_location"
                    app:layout_constraintWidth_percent=".8"
                    app:counterEnabled="true"
                    app:counterMaxLength="200">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sign_up_description_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="20mm"
                        android:inputType="textMultiLine"
                        android:hint="@string/description_hint"
                        android:maxLength="200"/>
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/next_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/amber_700"
            app:borderWidth="0dp"
            android:src="@drawable/ic_done" />
    </RelativeLayout>
</layout>