<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="es.upm.isii.tapastop.model.UserViewModel" />

    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/frame_layout_root">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/amber_700">
            <TextView
                android:id="@+id/forgot_password_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password_title"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.05"
                android:fontFamily="@font/brandon_grotesque_black"
                android:textSize="36sp"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/forgot_password_username_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_username_hint"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                app:layout_constraintTop_toBottomOf="@id/forgot_password_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.25"
                android:fontFamily="@font/brandon_grotesque_black"
                android:textColor="@color/grey_900"
                android:textAlignment="center"
                android:textSize="26sp"/>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/OutlinedRoundedBox"
                android:id="@+id/forgot_password_username"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/forgot_password_username_title"
                app:layout_constraintStart_toStartOf="@id/forgot_password_username_title"
                app:layout_constraintEnd_toEndOf="@id/forgot_password_username_title"
                app:layout_constraintBottom_toTopOf="@id/continue_button"
                app:layout_constraintVertical_bias="0.25"
                app:hintEnabled="false"
                app:boxBackgroundColor="@color/white"
                app:hintAnimationEnabled="false">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/forgot_password_username_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textCursorDrawable="@null"
                    android:inputType="textAutoComplete"
                    android:hint="@string/username_hint"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                style="@style/RoundedButton"
                android:id="@+id/continue_button"
                android:layout_margin="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/forgot_password_username_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/forgot_password_username"
                app:layout_constraintStart_toStartOf="@id/forgot_password_username"
                app:layout_constraintVertical_bias="0.3"
                android:stateListAnimator="@null"
                android:elevation="2dp"
                android:textColor="@color/black"
                android:text="@string/continue_title"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>

</layout>
